# ralph-swe-agent

./: .gitmodules  README.md  pyproject.toml
docs/: README.md
docs/advanced/: global_configuration.md  yaml_configuration.md
docs/usage/: output_files.md  swebench.md
src/ralph_swe_agent/: __init__.py  mini.py  mini_extra.py  swebench.py
src/ralphsweagent/: _bootstrap.py
src/ralphsweagent/agents/: __init__.py  enhancements.py  reasoning_tool_call.py
src/ralphsweagent/config/: README.md  __init__.py  model_context_windows.yaml
src/ralphsweagent/config/benchmarks/: __init__.py  swebench_toolcall_only.yaml
src/ralphsweagent/models/: __init__.py  context_window.py  litellm_model.py  litellm_response_model.py  openrouter_model.py  openrouter_response_model.py  portkey_model.py  portkey_response_model.py  requesty_model.py
src/ralphsweagent/models/utils/: __init__.py  actions_toolcall.py  actions_toolcall_response.py  openai_utils.py
src/ralphsweagent/run/: __init__.py  mini.py
src/ralphsweagent/run/benchmarks/: __init__.py  swebench.py  swebench_single.py
src/ralphsweagent/run/utilities/: __init__.py  mini_extra.py
tests/: conftest.py
tests/agents/: test_default.py
tests/models/: test_actions_toolcall.py  test_actions_toolcall_response.py  test_context_window.py  test_litellm_model.py  test_litellm_response_model.py  test_openai_utils.py
tests/run/: test_swebench.py  test_swebench_single.py
v2/: index.html  objects.inv  sitemap.xml
v2/advanced/control_flow/: index.html
v2/advanced/global_configuration/: index.html
v2/advanced/yaml_configuration/: index.html
v2/models/local_models/: index.html
v2/reference/agents/default/: index.html
v2/reference/agents/interactive/: index.html
v2/search/: search_index.json
v2/usage/mini/: index.html
v2/usage/output_files/: index.html
v2/usage/swebench/: index.html
(+8 files in other folders)
