[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-swe-agent"
version = "0.1.0"
description = "Thin extension layer over mini-swe-agent with custom SWE-bench runner hooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "requests",
  "jinja2",
  "pydantic>=2.0",
  "litellm>=1.75.5",
  "tenacity",
  "rich",
  "python-dotenv",
  "typer",
  "platformdirs",
  "textual",
  "prompt_toolkit",
  "datasets",
  "openai!=1.100.0,!=1.100.1",
]

[project.scripts]
mini = "ralphsweagent.run.mini:app"
mini-swe-agent = "ralphsweagent.run.mini:app"
mini-extra = "ralphsweagent.run.utilities.mini_extra:main"
mini-e = "ralphsweagent.run.utilities.mini_extra:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ralphsweagent*"]

[tool.setuptools.package-data]
ralphsweagent = ["config/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 90
